# src/routes/sampleRoute.js
@@ -4,7 +4,7 @@ const {
   getRouteByNumber,
   getRouteByRouteId,
   createRoute,
-  deleteRoute
+  deleteRouteByRouteNumber
 } = require('../controllers/sampleController');
 
 const router = express.Router();
@@ -13,6 +13,6 @@ const router = express.Router();
 router.get('/routes', getAllRoutes); // Get all routes
 router.get('/routes/:routeNumber', getRouteByNumber); // Get route by routeNumber
 router.post('/routes', createRoute); // Create a new route
-router.delete('/routes/:id', deleteRoute); // Delete route by MongoDB _id
+router.delete('/routes/:routeNumber', deleteRouteByRouteNumber);
 
 module.exports = router;
